@@ -3,6 +3,7 @@
 - Fixed some tests due to incorrect implementation (WL16033).
 - Updated third party dependencies (WL16852).
 - Fixed bug Cannot Perform Database Migration using MySql.EntityFrameworkCore 9.0.0 (MySQL Bug #117258, Oracle Bug #37513445).
+- Fixed failing tests due to server changes (Oracle Bug #37705281).
 
 
 9.2.0
